# oracle-borderless

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  cli.py  main.py  pyproject.toml  start_dev
database/: env.py
database/migrations/versions/: 0001_documents_pgvector.py  0002_conversations.py  0003_documents_last_edited_time.py
database/seeds/: __init__.py  __main__.py  dev_documents_seed.py
database/seeds/knowledge/: onboarding.md  regras-do-ecossistema.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: actions-vs-services.md  adding-new-domain.md  architecture.md  conventions.md  database-guide.md  scaffolding-guide.md  testing-guide.md
docs/adr/: 0007-agent-framework-pydantic-ai.md  0008-rag-hibrido-pgvector-mcp.md  0009-streaming-sse.md  0010-transporte-mcp-notion.md  README.md
docs/superpowers/plans/: 2026-07-03-agent-mvp.md  2026-07-04-milestone-1-oraculo-fatia-vertical.md  2026-07-10-milestone-2-memoria-episodica.md  2026-07-20-frontend-oraculo.md  2026-07-22-retrieval-gate.md
docs/superpowers/specs/: 2026-07-02-agent-mvp-design.md  2026-07-20-frontend-oraculo-design.md  (+3 more)
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
tests/: conftest.py
tests/fakes/: fake_embeddings_client.py  fake_notion_client.py  fake_oracle_engine.py  fake_retrieval_gate.py  fake_tavily_client.py
tests/integration/: conftest.py  test_migration_conversations.py  test_migration_pgvector.py
(+180 files in other folders)
