[project]
name = "oracle-borderless"
version = "0.1.0"
description = "Oracle Borderless — agente de IA (oráculo) sobre base de conhecimento aprovada do Notion via MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Framework HTTP
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # ORM (dual engine: async asyncpg + sync psycopg) + migrations
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    # Validação e settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # PK UUID v7
    "uuid6>=2024.7.10",
    # Scheduler distribuído (jobstore PostgreSQL)
    "apscheduler>=3.10,<4",
    # LLM — o oráculo pode usar Claude (Anthropic) ou GPT (OpenAI), selecionável via LLM_PROVIDER
    "anthropic>=0.40",
    "openai>=1.55",
]

[project.scripts]
cli = "cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "testcontainers[postgres]>=4.8",
    "prospector>=1.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
